[project]
authors = [
  {name = "Jonathan Herrera", email = "jonathan.herrera@posteo.de"},
]
description = "A python library for printing framed text to the terminal."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE.md", content-type = "text/markdown"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Printing",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = 'https://github.com/jnthnhrrr/python-hemline'
Code = 'https://github.com/jnthnhrrr/python-hemline'
Issues = 'https://github.com/jnthnhrrr/python-hemline/issues'

[tool.poetry]
name = "hemline"
version = "1.0.0"
description = "A python library for printing framed text to the terminal."
authors = ["Jonathan Herrera <jonathan.herrera@posteo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"
mypy = "^1.13.0"
isort = "^5.13.2"
black = "^24.10.0"
pytest = "^8.3.3"
uneedtest = "^0.1.0"
coverage = "^7.6.8"
pytest-cov = "^6.0.0"

[tool.black]
line-length = 80

[tool.ruff]
line-length = 80

[tool.isort]
line_length = 80
profile = "black"
extra_standard_library=["uneedtest"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
